draft-packages/form/KaizenDraft/Form/Primitives/Label/styles.scss
@import "~@kaizen/design-tokens/sass/color";
@import "~@kaizen/design-tokens/sass/typography";
@import "~@kaizen/deprecated-component-library-helpers/styles/type";
@import "~@kaizen/deprecated-component-library-helpers/styles/layout";

$label-start-margin: 10px;

// -----------------------------------------------
// Form Control Label Primitive
// -----------------------------------------------

.label,
:global(.ideal-sans) .label {
  // override Murmur global styles :(
  opacity: inherit;
  color: $kz-color-wisteria-800;
  visibility: visible;
  @include ca-type-align-start;
  width: 100%;
}

.reversed {
  color: $kz-color-white;
}

///////////////////////////////////////////////////
// LABEL TYPES
///////////////////////////////////////////////////

// This is to override bootstrap styles. Remove when appropriate
.text,
:global(.ideal-sans) .text {
  @include kz-typography-heading-6;
  @include ca-inherit-baseline;
}

%checkboxOrRadio,
:global(.ideal-sans) %checkboxOrRadio {
  @include kz-typography-paragraph-body;
  @include ca-inherit-baseline;
  display: flex;
}

.checkbox {
  @extend %checkboxOrRadio;
}

.radio {
  @extend %checkboxOrRadio;
}

.toggle {
  @include kz-typography-paragraph-body;
  @include ca-inherit-baseline;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.prependedLabel {
  @include ca-margin($end: $label-start-margin);
  order: -1; // place label before the control
}

.appendedLabel {
  @include ca-margin($start: $label-start-margin);
}

